--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,3 +30,6 @@ jobs:
       #- name: Test with pytest
         #run: |
          # pytest
+      - name: Install selenium and behave
+          pip install behave
+          pip install selenium
