--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,11 @@ jobs:
         run: |
           pip install behave
           pip install selenium
+      
+      - name: linting
+        uses: actions/pylinters@v1.4.2
+        with:
+          python-root: '.'
+          flake8-flags: ''
+          mypy-flags: ''
+          fail-on-isort: true
