--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,7 @@ jobs:
           pip install selenium
       
       - name: linting
-        uses: actions/pylinters@v1.4.2
+        uses: programmingwithalex/pylinter@v1.4.3
         with:
           python-root: '.'
           flake8-flags: ''
