--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,4 +41,10 @@ jobs:
           python-root: '.'
           flake8-flags: ''
           mypy-flags: ''
-          fail-on-isort: true
+          fail-on-isort: false
+          
+      - name: commit isort changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
