--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,4 +52,4 @@ jobs:
         uses: ad-m/github-push-action@v0.5.0
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: 'main'
