--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,8 +48,8 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
-      - name: push isort changes
-        uses: ad-m/github-push-action@v0.5.0
+      - name: Sort your Python imports with isort
+        uses: olance/isort-action@v1.1.0
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
           branch: ${{ github.ref }}
