--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,7 +48,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
-      - name: Sort your Python imports with isort
+      - name: Push changes
         uses: olance/isort-action@v1.1.0
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
