--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,14 +42,19 @@ jobs:
           flake8-flags: ''
           mypy-flags: ''
           fail-on-isort: false
-          
-      - name: commit isort changes
+      - name: Run isort
+        uses: olance/isort-action@v1.0.0
+        with:
+          args: .
+
+      - name: Commit changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
+
       - name: Push changes
-        uses: olance/isort-action@v1.1.0
+        uses: ad-m/github-push-action@v0.5.0
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
-          branch: ${{ github.ref }}
+      
