--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,6 +48,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
+          git config --global --add safe.directory /github/workspace
       - name: push isort changes
         uses: ad-m/github-push-action@v0.5.0
         with:
