--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,9 +48,10 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'isort'
-          git config --global --add safe.directory /github/workspace
+          
       - name: push isort changes
         uses: ad-m/github-push-action@v0.5.0
+          run git config --global --add safe.directory /github/workspace
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
           branch: ${{ github.ref }}
