--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
           pip install behave
           pip install selenium
       
-      - name: linting
+      - name: pylinter
         uses: programmingwithalex/pylinter@v1.4.3
         with:
           python-root: '.'
