--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,6 +51,7 @@ jobs:
           
       - name: push isort changes
         uses: ad-m/github-push-action@v0.5.0
+          run git config --global --add safe.directory /github/workspace
         with:
           github_token: ${{ secrets.GH_ACCESS_TOKEN }}
           branch: ${{ github.ref }}
