--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,3 +43,6 @@ jobs:
           mypy-flags: ''
           fail-on-isort: true
           
+      - name: Test with pytest
+        run: |
+          pytest
