--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,4 +45,4 @@ jobs:
           
       - name: Test with pytest
         run: |
-          if [ -d tests ] || [ -d test ]; then python -m pytest; fi
+          python -m pytest;
